--- a/styles/base.css
+++ b/styles/base.css
@@ -17,4 +17,13 @@ img {
   height: 8em;
   
 }
+.tag {
+  text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  color: white;
+  background-color: black;
+  width: 100%;
+}
 /* for mobile view, make sure to have border around map so user can scroll the browser and not be stuck on the map */
