--- a/styles/layout.css
+++ b/styles/layout.css
@@ -4,32 +4,33 @@
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    margin: auto;
-    background-color: rgb(0,0,0,0,6);
-    background-color: rgba(0,0,0,0.6);
-}
-
-#verify-window {
-    padding-top: 0
+    margin: auto; 
+    background-color: rgb(132, 226, 132);
+    background: url('img/snoop-v1.gif');
+    display: relative;
+    padding-top: 200px;
 }
 
 .verify-content {
-    background-color: #102347;
+    background-color: rgb(158, 224, 158);
     margin: auto;
     padding: 3em 2em;
-    border: 3px solid yellow;
-    width: 60%;
+    border: 1px solid black;
+    width: 50%;
 }
-h2 {
-    font-size: 35px;
-    font-family: 'Press Start 2P', cursive;
-    text-align: center;
-    color: yellow;
-    margin-bottom: 1em;
-  }
+.button {
+    font-size: 24px;
+    margin: 20px;
+    padding: 10px 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+}
+.button:hover {
+    background-color: black;
+    color: white;
+}
