--- a/styles/base.css
+++ b/styles/base.css
@@ -25,5 +25,9 @@ img {
   color: white;
   background-color: black;
   width: 100%;
+} 
+#about-page {
+  text-align: center;
 }
+
 /* for mobile view, make sure to have border around map so user can scroll the browser and not be stuck on the map */
