--- a/styles/layout.css
+++ b/styles/layout.css
@@ -39,10 +39,12 @@
 .column {
     flex: 50%;
     padding: 10px;
+    text-align: center;
 }
 .row {
     display: flex;
 }
+
 #about-pics {
     width: 75%;
     height: auto;
@@ -56,4 +58,21 @@
 }
 #blurb {
     margin: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin-left: auto;
+    margin-right: auto;
+    width: 25em;
+    padding: 40px;
+    border-style: solid;
+    border-width: 0.5px;
+    margin-bottom: 50px;
+}
+img {
+    margin-left: 0;
+    height: 4em;
+}
+
+/* Nav specs */
+.logo {
+   text-align: left;
 }
