--- a/styles/base.css
+++ b/styles/base.css
@@ -2,14 +2,14 @@
   height: 75%;
   border: solid;
   padding: 2em;
-  border-left: 3em;
+  margin: 30px;
+  margin-top: 10px;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  text-align: center;
   
 }
 /* img {
@@ -27,23 +27,29 @@ html, body {
   width: 100%;
 }
 
-h1, h2 {
+h1 {
   font-size: 100%;
-  font-family: sans-serif;
+  font-family: 'Quicksand', sans-serif;
   text-align: center;
   color: black;
   text-shadow: -.5px 0 white, 0 .5px white, .5px 0 white, 0 -.5px white;
   margin-bottom: 1em;
 } 
-.nav { 
+h3 {
+  font-family: 'Quicksand', sans-serif;
+}
+
+/* .nav { 
 align-self: center;
 transform : scale(1.05);
 color : greenyellow;
 font-size: 1.5em;
 margin: 20px;
-}
+} */
 
-.home {
+/* .site-header {
+  display: block;
+  position: fixed;
   
-}
+} */
 /* for mobile view, make sure to have border around map so user can scroll the browser and not be stuck on the map */
