--- a/styles/layout.css
+++ b/styles/layout.css
@@ -17,14 +17,20 @@
 }
 
 .verify-content {
-    background-color: rgb(158, 224, 158);
+    background-color: rgb(169, 236, 169);
     margin: auto;
     padding: 3em 2em;
     border: 1px solid black;
     width: 50%;
 }
+#verify-form {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+}
 .button {
     font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
     margin: 20px;
     padding: 10px 20px;
     border-radius: 12px;
@@ -46,17 +52,22 @@
 }
 
 #about-pics {
-    width: 75%;
+    max-width: 65%;
     height: auto;
     margin: 10px;
+    padding: 5px;
+    border: 1px solid black;
+    box-shadow: 0 10px 6px -6px #777;
 }
-#about-page {
-    font-family: sans-serif;
-}
+
 #summary {
     margin: 50px;
 }
+#names {
+    font-family: 'Quicksand', sans-serif;
+}
 #blurb {
+    font-family: 'Open Sans', sans-serif;
     margin: 20px;
     background-color: rgba(255, 255, 255, 0.5);
     margin-left: auto;
@@ -74,5 +85,26 @@ img {
 
 /* Nav specs */
 .logo {
+   font-family: 'Quicksand', sans-serif;
    text-align: left;
+   margin-left: 20px;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+  
+li {
+    float: right;
+}
+  
+li a {
+    display: block;
+    padding: 8px;
+    margin-right: 30px;
+    text-decoration: none;
+    border: .5px solid black;
+    background-color: rgb(169, 236, 169);
 }
