--- a/styles/layout.css
+++ b/styles/layout.css
@@ -44,11 +44,13 @@
 /* About page layout */
 .column {
     flex: 50%;
-    padding: 10px;
+    padding: 30px;
     text-align: center;
+    
 }
 .row {
     display: flex;
+    border-top: 1px solid;
 }
 
 #about-pics {
@@ -77,7 +79,17 @@
     border-style: solid;
     border-width: 0.5px;
     margin-bottom: 50px;
+    box-shadow: 0 10px 6px -6px #777;
 }
+div h3 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 150%;
+}
+div h1 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 150%;
+}
+
 img {
     margin-left: 0;
     height: 4em;
