--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,5 @@
 
-/* Need to display on page load UNLESS user has verified recently (localstorage) */
+/* Verify page */
 #verify-window {
     display: none;
     position: fixed;
@@ -54,7 +54,7 @@
 }
 
 #about-pics {
-    max-width: 65%;
+    max-width: 400px;
     height: auto;
     margin: 10px;
     padding: 5px;
@@ -101,24 +101,6 @@ img {
    text-align: left;
    margin-left: 20px;
 }
-/* @media screen and (max-width: 768px) {
-        .main-nav {
-            visibility: hidden;
-            
-        }
-        .icon-menu {
-            visibility: visible;
-            float: right;
-            
-        }
-    }
-@media screen and (min-width: 768px) {
-    .icon-menu {
-        visibility: hidden;
-        
-        
-    }
-} */
 
 ul {
     list-style-type: none;
@@ -138,4 +120,20 @@ li a {
     text-decoration: none;
     border: .5px solid black;
     background-color: rgb(169, 236, 169);
+}
+@media screen and (max-width: 768px) {
+    #left-column {
+        flex: 50%;
+        padding: 30px;
+        width: auto;
+        text-align: center;  
+    }
+    #about-pics {
+        max-width: 400px;
+    }
+    .row {
+        display: block;
+        border-top: 1px solid;
+    }
+   
 }
