--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,4 @@
+/* Map controls */
 #map {
   height: 75%;
   border: 1px solid;
@@ -10,6 +11,15 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+#pac-input {
+  font-size: 12px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding: 12px 20px;
+  /* margin: 8px 0; */
 }
 
 .tag {
