--- a/styles/layout.css
+++ b/styles/layout.css
@@ -10,8 +10,6 @@
     height: 100%;
     overflow: auto;
     margin: auto; 
-    background-color: rgb(132, 226, 132);
-    background: url('img/snoop-v1.gif');
     display: relative;
     padding-top: 200px;
 }
@@ -37,7 +35,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
 }
 .button:hover {
-    background-color: black;
+    background-color: rgb(105, 145, 105);
     color: white;
 }
 
@@ -114,12 +112,17 @@ li {
 }
   
 li a {
+    color: black;
     display: block;
-    padding: 8px;
+    padding: 15px;
     margin-right: 30px;
     text-decoration: none;
     border: .5px solid black;
     background-color: rgb(169, 236, 169);
+}
+li a:hover {
+    background-color: rgb(105, 145, 105);
+    color: white;
 }
 @media screen and (max-width: 768px) {
     #left-column {
