--- a/styles/modules.css
+++ b/styles/modules.css
@@ -5,3 +5,8 @@
 .github img:hover { 
     transform: scale(1.1); 
 }
+
+.infoWindow {
+    text-decoration: none;
+    font-family: sans-serif;
+  }
