--- a/styles/layout.css
+++ b/styles/layout.css
@@ -117,7 +117,8 @@ li a {
     padding: 15px;
     margin-right: 30px;
     text-decoration: none;
-    border: .5px solid black;
+    font-weight: bold;
+    border: 1px solid black;
     background-color: rgb(169, 236, 169);
 }
 li a:hover {
