--- a/styles/layout.css
+++ b/styles/layout.css
@@ -116,6 +116,7 @@ li a {
     display: block;
     padding: 15px;
     margin-right: 30px;
+    margin-bottom: 20px;
     text-decoration: none;
     border: .5px solid black;
     background-color: rgb(169, 236, 169);
